Fix #115151: ID property's id_type enum is missing the SCREEN type.

Was removed by 2e635b6500 during 2.80 development, but the Screen IDType
was never actually removed in the end.